Replace Apache HttpClient with Spring RestClient